<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/set_gym_time"
        android:textSize="28sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">
        <EditText
            android:id="@+id/hours_edit_text"
            android:text="@string/zero"
            style="@style/number_text"
            android:autofillHints=""
            android:hint="@string/zero"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/hour"
            android:textSize="32sp"/>
        <EditText
            android:id="@+id/minutes_edit_text"
            android:layout_marginStart="10dp"
            android:text="@string/zero"
            style="@style/number_text"
            android:autofillHints="" />
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:textSize="32sp"/>
    </LinearLayout>
</LinearLayout>